[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Sprites/UI/Cristal.png" type="Texture" id=1]
[ext_resource path="res://Button.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sprites/UI/Cristal_pressed.png" type="Texture" id=3]
[ext_resource path="res://UI/UI.gd" type="Script" id=4]
[ext_resource path="res://Assets/Sprites/UI/Cristal3.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/UI/Cristal3_pressed.png" type="Texture" id=6]
[ext_resource path="res://Assets/Fonts/PressStart2P-Regular.ttf" type="DynamicFontData" id=7]

[sub_resource type="Animation" id=1]
resource_name = "Fade"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationPlayer/Foreground:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.180392, 0.133333, 0.184314, 0 ), Color( 0.180392, 0.133333, 0.184314, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationPlayer/Foreground:rect_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 986, 556 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimationPlayer/Foreground:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationPlayer/Foreground:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 556 ), Vector2( 986, 556 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationPlayer/Foreground:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 986, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationPlayer/Foreground:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 556 ), Vector2( 986, 556 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationPlayer/Foreground:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 7 )

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Fade = SubResource( 1 )
anims/SwipeLeft = SubResource( 2 )
anims/SwipeRight = SubResource( 3 )

[node name="Foreground" type="ColorRect" parent="AnimationPlayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.180392, 0.133333, 0.184314, 0 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 341.0
margin_top = 225.0
margin_right = 473.0
margin_bottom = 315.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 132.0
margin_bottom = 90.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 132.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 4 )
text = "Poderes"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 26.0
margin_right = 132.0
margin_bottom = 90.0

[node name="MainCrystal" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 64.0
margin_bottom = 64.0
rect_clip_content = true
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExtraCrystal" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 68.0
margin_right = 132.0
margin_bottom = 64.0
size_flags_horizontal = 2
size_flags_vertical = 2
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_up" from="MarginContainer/VBoxContainer/HBoxContainer/MainCrystal" to="." method="_on_MainCrystal_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/HBoxContainer/ExtraCrystal" to="." method="_on_ExtraCrystal_button_up"]
